moving to jdk21 and cleaning up
Signed-off-by: bharath-techie <bharath78910@gmail.com>